[package]
name = "promits"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
indicatif = "0.17.12"
inquire = "0.7.5"
reqwest = {version="0.12.22", features=["json","multipart"]}
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio = {version="1.46.0", features=["full"]}
